--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -25,7 +25,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:text="Subject"
                 android:textSize="30dp"
                 android:textStyle="bold" />
 
@@ -33,22 +32,19 @@
                 android:id="@+id/detail_source"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:text="Source" />
+                android:layout_margin="3dp" />
 
             <TextView
                 android:id="@+id/detail_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:text="Author" />
+                android:layout_margin="3dp" />
 
             <TextView
                 android:id="@+id/detail_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:text="Date" />
+                android:layout_margin="3dp" />
 
             <ImageView
                 android:id="@+id/detail_image"
@@ -58,17 +54,16 @@
 
             <TextView
                 android:id="@+id/detail_description"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/detail_url"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
-                android:autoLink="web"
-                android:text="More details: " />
+                android:autoLink="web" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
