--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -22,28 +22,26 @@
 
             <TextView
                 android:id="@+id/subject"
-                android:layout_margin="10dp"
-                android:textSize="15sp"
-                android:textStyle="bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:gravity="center_vertical"
-                android:text="temp" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/description"
-                android:layout_margin="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="temp2" />
+                android:layout_margin="10dp" />
         </LinearLayout>
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginRight="16dp"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:layout_marginRight="16dp" />
     </LinearLayout>
 
 </LinearLayout>
